GNOME Bugzilla – Bug 702782
theme-node: fix support for box-shadow: none
Last modified: 2013-06-25 17:12:39 UTC
When the theme wants to clear a box-shadow with a more specific selector that resets it to none, we currently ignore it. See attached patch.
Created attachment 247394 [details] [review] theme-node: fix support for box-shadow: none We currently don't parse "box-shadow: none", despite being valid CSS. Fix it so that it uses the default shadow values.
Review of attachment 247394 [details] [review]: OK, but remove the gvc hunk before pushing.
Oops, indeed - I now pushed it without it. Attachment 247394 [details] pushed as 0b219bf - theme-node: fix support for box-shadow: none